--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Thinking OUT!
+email: mesa-00.chested@icloud.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Des réflexions autour de la productivité ! Des sujets de geeks ! De la Pop culture ! Et aussi des dinosaures ! Des fondants au chocolat ! Des licornes ! Le retour de l'être aimé ! Abonne toi !
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: omoran_fenrir
+github_username:  thedarknoob
 
 # Build settings
 theme: minima
